<?xml version="1.0" encoding="utf-8"?>
<resources>

<<<<<<< HEAD
    <string name="app_name">WhatTheHack</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOG IN</string>
    <string name="signup">Sign Up for ...</string>
    <string name="needhelp">Need help?</string>
    <string name="hint_username">Username</string>
=======
    <string name="app_name">touristagram</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOG IN</string>
    <string name="signup">Sign Up for ...</string>
    <string name="needhelp">Need help?</string>
    <string name="hint_username">Username</string>
>>>>>>> refs/remotes/origin/master
    <string name="hint_password">Password</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_places">Places</string>

</resources>
